# yadro-test-task

./: .clang-tidy  CMakeLists.txt  README.md
.ci/: build-project-valgrind.sh  build-project.ps1  build-project.sh
.github/: dev-build.yml
.github/workflows/: build_and_test.yml  dev-build.yml
src/: base_app.hpp  config_parser.hpp  generate_tape.cpp  read_to_console.cpp  sort_improved.cpp  sort_simple.cpp  write_from_console.cpp
tape_simulation/: CMakeLists.txt
tape_simulation/include/: copy_elements_sorted.hpp  copy_n.hpp  improved_merge_sort.hpp  merge.hpp  merge_sort.hpp  merge_sort_improved.hpp  tape.hpp  tape_pool.hpp  tape_view.hpp  tape_view_fabric.hpp  tape_view_read_iterators.hpp  tape_view_write_iterators.hpp
tape_simulation/include/impl/: copy_elements_sorted.hpp  i_tape.hpp  merge.hpp  merge_sort.hpp  merge_sort_additional_tapes_manager.hpp  merge_sort_arithmetics_base.hpp  merge_sort_counter.hpp  merge_sort_impl.hpp  read_iterator_base.hpp  tape_pool_statistics_base.hpp  tape_view_fabric_statistics_base.hpp  write_iterator_base.hpp
tape_simulation/src/: copy_elements_sorted.cpp  copy_n.cpp  improved_merge_sort.cpp  merge.cpp  merge_sort.cpp  merge_sort_additional_tapes_manager.cpp  merge_sort_arithmetics_base.cpp  merge_sort_counter.cpp  merge_sort_impl.cpp  merge_sort_impl_checks.cpp  merge_sort_improved.cpp  tape.cpp  tape_pool.cpp  tape_view.cpp  tape_view_fabric.cpp  tape_view_read_iterators.cpp  tape_view_write_iterators.cpp
test/: CMakeLists.txt  common_utils.hpp  copy_elements_sorted.cpp  improved_merge_sort.cpp  improved_merge_sort_tests_utils.cpp  improved_merge_sort_tests_utils.hpp  merge.cpp  merge_sort.cpp  merge_sort_improved.cpp  merge_sort_tests_utils.cpp  merge_sort_tests_utils.hpp  merge_tapes.cpp  merge_test_utils.cpp  merge_test_utils.hpp  sort_test_utils.cpp  sort_test_utils.hpp  tape.cpp  tape_pool.cpp  tape_view_fabric.cpp  tape_view_read_iterator.cpp  tape_view_write_iterator.cpp
